2005-07-19  Nathaniel Smith  <njs@pobox.com>

	* netcmd.cc (read): Make the bad HMAC error message clearer.

2005-07-18  Nathaniel Smith  <njs@pobox.com>

	* keys.cc (get_passphrase): Do still error out if they keep typing
	empty passphrases.

2005-07-18  Richard Levitte  <richard@levitte.org>

	* database.cc: Move the inclusion of stdarg.h...
	* database.hh: ... here.

2005-07-18  Matt Johnston  <matt@ucc.asn.au>

	* keys.cc (get_passphrase): don't bomb out if they type an empty passphrase.

2005-07-18  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* work.cc, manifest.cc: Remove 'using namespace boost'.

2005-07-18  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc (received_items): New instance variable.
	(session::session): Initialize it.
	(note_item_arrived): Maintain it.
	(item_request_outstanding): Rename it to...
	(item_already_received): ...this, and have it check both
	outstanding and fulfilled requests.
	(queue_send_data_cmd, queue_send_delta_cmd): Call it via new
	name.
	
	Hopefully this will eliminate cases where "revs in" is larger than
	"revs written".
	
2005-07-17  Nathaniel Smith  <njs@pobox.com>

	* constants.cc (legal_key_name_bytes): Allow + and _ to appear in
	key names.

2005-07-17  Nathaniel Smith  <njs@pobox.com>

	* ui.{cc,hh} (tick_write_dot::write_ticks): Start a new line when
	too many dots have been written.
	* netsync.cc (process_refine_cmd): Add comment noting a possible
	optimization regarding subtree refinement.

2005-07-17  Nathaniel Smith  <njs@pobox.com>

	* configure.ac, win32/monotone.iss, monotone.spec:
	* debian/changelog: Bump version numbers to 0.21.
	* NEWS: Commit to a timestamp.

2005-07-17  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Add diff changes, more tweaking.
	* UPGRADE: Update for 0.21.
	* AUTHORS: Add Vladimir Vukicevic.

2005-07-17  Nathaniel Smith  <njs@pobox.com>

	* tests/t_diff_external.at: New test.
	* testsuite.at: Add it.

2005-07-17  Nathaniel Smith  <njs@pobox.com>
