@@ -674,3 +674,4 @@ m4_include(tests/t_kill_tag_locally.at)
 m4_include(tests/t_restricted_diff_unchanged.at)
 m4_include(tests/t_selector_globbing.at)
 m4_include(tests/t_diff_external.at)
+m4_include(tests/t_migrate_broken_schema.at)
